pipelines/http-api-nodejs/kubernetes/03-service.yaml
kind: Service
apiVersion: v1
metadata:
  name: ${APP_NAME}
  namespace: ${NAMESPACE}
spec:
  type: NodePort
  selector:
    app: ${APP_NAME}
  ports:
  - name: https
    port: ${SERVER_PORT}
    targetPort: ${SERVER_PORT}
